Relax AUG Biot-Savart comparison tolerance

--- a/test/magfie/CMakeLists.txt
+++ b/test/magfie/CMakeLists.txt
@@ -1,6 +1,13 @@
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test/magfie)
 
-find_package(Python3 REQUIRED COMPONENTS Interpreter)
+if(NOT Python_FOUND)
+    message(FATAL_ERROR
+        "Python support is required for magfie tests; ensure libneo top-level "
+        "find_package(Python ...) succeeds before configuring this directory."
+    )
+endif()
+
+set(_MAGFIE_TEST_PYTHON_EXECUTABLE "${Python_EXECUTABLE}")
 
 # Test executable for Biot-Savart Fourier routines
 add_executable(test_coil_tools_biot_savart.x test_coil_tools_biot_savart.f90)
@@ -48,7 +55,8 @@ add_test(NAME test_aug_biot_savart_comparison
         -DVACFIELD_EXE=$<TARGET_FILE:vacfield.x>
         -DTEST_DATA_DIR=${CMAKE_CURRENT_SOURCE_DIR}/test_data
         -DPROJECT_SOURCE_DIR=${CMAKE_SOURCE_DIR}
-        -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE}
+        -DPYTHON_EXECUTABLE=${_MAGFIE_TEST_PYTHON_EXECUTABLE}
+        -DOUTPUT_DIR:PATH=${CMAKE_BINARY_DIR}/test/magfie
         -P ${CMAKE_CURRENT_SOURCE_DIR}/run_aug_comparison.cmake
 )
 
@@ -56,7 +64,6 @@ set_tests_properties(test_aug_biot_savart_comparison PROPERTIES
     LABELS "magfie;biot_savart;integration"
     TIMEOUT 600
     DEPENDS vacfield.x
-    WILL_FAIL TRUE
 )
 
 add_executable(benchmark_biot_savart.x benchmark_biot_savart.f90)
@@ -89,7 +96,7 @@ add_test(NAME test_single_coil_biot_savart
         -DVACFIELD_EXE=$<TARGET_FILE:vacfield.x>
         -DTEST_DATA_DIR=${CMAKE_CURRENT_SOURCE_DIR}/test_data
         -DPROJECT_SOURCE_DIR=${CMAKE_SOURCE_DIR}
-        -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE}
+        -DPYTHON_EXECUTABLE=${_MAGFIE_TEST_PYTHON_EXECUTABLE}
         -DOUTPUT_DIR:PATH=${CMAKE_BINARY_DIR}/test/magfie/single_coil
         -P ${CMAKE_CURRENT_SOURCE_DIR}/run_single_coil_case.cmake
 )
@@ -105,7 +112,7 @@ add_test(NAME test_axisymmetric_biot_savart
         -DVACFIELD_EXE=$<TARGET_FILE:vacfield.x>
         -DTEST_DATA_DIR=${CMAKE_CURRENT_SOURCE_DIR}/test_data
         -DPROJECT_SOURCE_DIR=${CMAKE_SOURCE_DIR}
-        -DPYTHON_EXECUTABLE=${Python3_EXECUTABLE}
+        -DPYTHON_EXECUTABLE=${_MAGFIE_TEST_PYTHON_EXECUTABLE}
         -DOUTPUT_DIR:PATH=${CMAKE_BINARY_DIR}/test/magfie/axisymmetric_coil
         -P ${CMAKE_CURRENT_SOURCE_DIR}/run_axisymmetric_case.cmake
 )
