--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,6 @@ on: [push, pull_request]
 
 permissions:
   contents: read
-  pages: write
-  id-token: write
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -63,6 +61,10 @@ jobs:
     needs: GNU
     if: always()
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     env:
       BRANCH_NAME: ${{ github.ref_name }}
       COMMIT_SHA: ${{ github.sha }}
@@ -175,6 +177,10 @@ PY
     if: github.event_name == 'push'
     needs: dashboard
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
