Guard dashboard workflow and diversify test RNG

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
   dashboard:
     name: Build test dashboard
     needs: GNU
-    if: always()
+    if: ${{ needs.GNU.result == 'success' }}
     runs-on: ubuntu-22.04
     permissions:
       contents: read
