Add coordinate_system_t abstraction for VMEC and Geoflux
Implements abstract coordinate system interface with concrete VMEC and
Geoflux implementations following TODO.md steps 0-8. The abstraction
provides factory functions and deferred methods for coordinate
transformations, covariant basis vectors, and metric tensor computation.

- Add abstract coordinate_system_t with three deferred methods:
  evaluate_point, covariant_basis, metric_tensor
- Implement vmec_coordinate_system_t using splint_vmec_data
- Implement geoflux_coordinate_system_t using geoflux_to_cyl
- Add factory functions: make_vmec_coordinate_system,
  make_geoflux_coordinate_system
- Add test_coordinate_systems to verify interface compilation
- All 33 tests pass with no regressions

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -21,6 +21,9 @@ add_library(neo STATIC
     src/new_vmec_allocation_stuff.f90
     src/coordinates/cylindrical_cartesian.f90
     src/coordinates/vmec_coordinates.f90
+    src/coordinates/libneo_coordinates.f90
+    src/coordinates/libneo_coordinates_vmec.f90
+    src/coordinates/libneo_coordinates_geoflux.f90
     src/spline_vmec_data.f90
     src/vmecinm_m.f90
     src/vmec/vmec_field_tools.f90
