--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,10 @@ jobs:
         run: |
           cd build && ctest --output-on-failure
 
+      - name: Generate dashboard demo plots
+        run: |
+          python3 tools/dashboard/generate_fun_plots.py
+
       - name: Editable install of libneo (system-wide)
         run: |
           python3 -m pip install --break-system-packages -r requirements.txt
@@ -160,6 +164,28 @@ jobs:
             --repo "${GITHUB_REPOSITORY}" \
             --project-name "libneo" \
             --github-pages-url "${PAGES_BASE_URL}"
+
+      - name: Fix branch back-links
+        run: |
+          set -euo pipefail
+          python3 - <<'PY'
+from pathlib import Path
+import os
+
+root = Path('dashboard/test')
+overview = root / 'index.html'
+if not overview.exists():
+    raise SystemExit('overview page missing; cannot fix back-links')
+
+for html_path in root.glob('**/index.html'):
+    if html_path == overview:
+        continue
+    relative = os.path.relpath(overview, html_path.parent)
+    text = html_path.read_text(encoding='utf-8')
+    if 'href="../index.html"' in text:
+        text = text.replace('href="../index.html"', f'href="{relative}"')
+        html_path.write_text(text, encoding='utf-8')
+PY
 
       - name: Prune closed branches
         env:
