Fix: resolve circular dependency for geoflux_coordinates
Move geoflux_coordinates.f90 and geqdsk_tools.f90 from magfie library
to neo library to resolve build dependency issue. This allows
libneo_coordinates_geoflux to properly use geoflux_coordinates module.

Changes:
- Move src/coordinates/geoflux_coordinates.f90 to neo (CMakeSources.in)
- Move src/magfie/geqdsk_tools.f90 to neo (CMakeSources.in)
- Remove both from magfie library (src/magfie/CMakeLists.txt)

This resolves the circular dependency where neo needed geoflux_coordinates
from magfie, but magfie depends on neo. All 33 tests pass.

--- a/CMakeSources.in
+++ b/CMakeSources.in
@@ -21,6 +21,7 @@ add_library(neo STATIC
     src/new_vmec_allocation_stuff.f90
     src/coordinates/cylindrical_cartesian.f90
     src/coordinates/vmec_coordinates.f90
+    src/coordinates/geoflux_coordinates.f90
     src/coordinates/libneo_coordinates.f90
     src/coordinates/libneo_coordinates_vmec.f90
     src/coordinates/libneo_coordinates_geoflux.f90
@@ -29,6 +30,7 @@ add_library(neo STATIC
     src/vmec/vmec_field_tools.f90
     src/plag_coeff.f90
     src/binsrc.f90
+    src/magfie/geqdsk_tools.f90
     src/boozer_converter.f90
     src/magfie/magfie_vmec.f90
     src/util/simpson_integration.f90
