--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -19,6 +19,8 @@ add_library(magfie STATIC
     magfie_cyl.f90
     geoflux_field.f90
     coil_tools.f90
+    analytical_gs_circular.f90
+    analytical_tokamak_field.f90
     ../fftw3.F90
 )
 target_link_libraries(magfie PRIVATE
