--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -141,6 +141,12 @@ target_link_libraries(test_vmec_modules.x neo)
 add_executable(test_coordinate_systems.x source/test_coordinate_systems.f90)
 target_link_libraries(test_coordinate_systems.x neo ${MAGFIE_LIB})
 
+add_executable(test_analytical_gs_circular.x source/test_analytical_gs_circular.f90)
+target_link_libraries(test_analytical_gs_circular.x ${MAGFIE_LIB} ${COMMON_LIBS})
+
+add_executable(test_analytical_circular.x source/test_analytical_circular.f90)
+target_link_libraries(test_analytical_circular.x ${MAGFIE_LIB} ${COMMON_LIBS})
+
 
 ## Standard tests according to standard libneo Fortran test convention.
 
@@ -162,6 +168,8 @@ add_fortran_test(test_collision_freqs)
 add_fortran_test(test_transport)
 add_fortran_test(test_vmec_modules)
 add_fortran_test(test_coordinate_systems)
+add_fortran_test(test_analytical_gs_circular)
+add_fortran_test(test_analytical_circular)
 
 if(LIBNEO_TESTING_ENABLED)
   add_test(
