Implement full Cerfon-Freidberg analytical GS solver with κ and δ
Complete implementation of "One size fits all" analytical tokamak
equilibrium solver with support for arbitrary elongation (κ) and
triangularity (δ), based on Cerfon-Freidberg (2010) and Eslbauer (2017).

Key Features:
- 7 Cerfon-Freidberg basis functions (ψ₁-ψ₇) with verified derivatives
- General 7×7 boundary condition solver via LAPACK dgesv
- Supports circular and shaped plasmas (ε, κ, δ parameters)
- All derivatives verified with SymPy (2 errors found/fixed in ψ₇)

Implementation:
- New: src/magfie/analytical_gs_solver.f90 (basis functions + solver)
- Updated: analytical_tokamak_field.f90 (added κ, δ support)
- Deleted: analytical_gs_circular.f90 (replaced by general solver)
- Updated: test_analytical_circular.f90 (tests both circular and shaped)
- New: tools/verify_gs_derivatives.py (SymPy verification tool)

Testing:
- 56 tests passing (boundary conditions + ∇·B=0 verification)
- Boundary conditions satisfied to machine precision (tol=1e-10)
- PNG flux surface visualization for circular and shaped cases
- Output: build/test/flux_{circular,shaped}.png

Verification:
- All derivatives checked symbolically with SymPy
- Fixed 2 coefficient errors in ψ₇ derivatives:
  * dpsi_7/dx: x³y² coefficient (180 → 330)
  * d²psi_7/dx²: x²y² coefficient (1080 → 1710)

References:
- Cerfon & Freidberg, Phys. Plasmas 17, 032502 (2010)
- Verena Eslbauer, Bachelor thesis, TU Graz (2017)

Refs: tokamak

--- a/src/magfie/CMakeLists.txt
+++ b/src/magfie/CMakeLists.txt
@@ -19,7 +19,7 @@ add_library(magfie STATIC
     magfie_cyl.f90
     geoflux_field.f90
     coil_tools.f90
-    analytical_gs_circular.f90
+    analytical_gs_solver.f90
     analytical_tokamak_field.f90
     ../fftw3.F90
 )
