Deploy dashboard on PR updates

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -207,14 +207,13 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Upload dashboard artifact
-        if: ${{ github.event_name == 'push' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: './dashboard'
 
   deploy:
     name: Deploy to GitHub Pages
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || github.event_name == 'pull_request'
     needs: dashboard
     runs-on: ubuntu-22.04
     permissions:
